fix top spacing

--- a/source/Frontend/style/components/_maintext.scss
+++ b/source/Frontend/style/components/_maintext.scss
@@ -4,5 +4,5 @@
     border-radius: 1rem;
     background: white;
     padding: 2rem;
-    margin: 1rem;
+    margin: 0 1rem;
 }
